# mcp-server-test

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/mcp_server_test/: __init__.py  server.py
tests/: __init__.py  test_server.py
