[project]
name = "mcp-server-test"
version = "0.1.0"
description = "A test repository for MCP (Model Context Protocol) server development."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "kawabeshogo", email = "kawabeshogo@example.com" }]
dependencies = [
  "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "ruff>=0.5.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "pre-commit>=3.7.0",
  "mypy>=1.10.0",
  "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-select = ["I", "B", "UP", "C4", "SIM"]
ignore = ["D203", "D212"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
